# endfield-block-game

./: .gitignore  .prettierrc  CLAUDE.md  LICENSE  README.md
backend/: CMakeLists.txt  main.cpp
backend/include/: board.h  cell.h  file-loader.h  game-data-packet.h  game.h  json.h  part.h  postion.h  solver.h
backend/src/: board.cpp  file-loader.cpp  game.cpp  main.cpp  part.cpp  solver.cpp
backend/tests/: Example1.txt  Example3.txt  Example6.txt  test1.txt
docs/public/md/: roadmap.md
frontend/: .gitignore  .npmrc  README.md  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.web.json
frontend/src/main/: index.ts
frontend/src/preload/: index.d.ts  index.ts
frontend/src/renderer/src/: App.vue
frontend/src/renderer/src/api/: backend.ts
frontend/src/renderer/src/assets/: main.css
frontend/src/renderer/src/components/: CountIndicator.vue  DragLayer.vue  GameBoard.vue  LevelDesigner.vue  PiecePanel.vue  PieceView.vue  StartScreen.vue
frontend/src/renderer/src/data/: example1.ts
frontend/src/renderer/src/store/: audio.ts  drag.ts  game.ts  viewport.ts
frontend/src/renderer/src/types/: level.ts
test/: Example2.txt  Example4.txt  Example5.txt
